fixed spacing between End-game-button and see-leaderboard-button

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -540,9 +540,14 @@ main input:focus {
 }
 
 #end-game-button,
-#end-game-button2,
-#see-leaderboard-button{
+#end-game-button2{
   margin: 2rem auto;
+  font-size: 1.5rem;
+  width: 15rem;
+}
+
+#see-leaderboard-button{
+  margin: 0 auto;
   font-size: 1.5rem;
   width: 15rem;
 }
